// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`atomic:component calls \`npm init @coveo/atomic-component\` properly 1`] = `
[
  "@coveo/create-atomic-component@1.2.3",
  [
    "foo",
  ],
  {
    "stdio": "inherit",
  },
]
`;

exports[`atomic:component calls \`npm init @coveo/atomic-component\` when the user select page in the prompt 1`] = `
[
  "@coveo/create-atomic-component@1.2.3",
  [
    "foo",
  ],
  {
    "stdio": "inherit",
  },
]
`;

exports[`atomic:component calls \`npm init @coveo/atomic-result-component\` properly 1`] = `
[
  "@coveo/create-atomic-result-component@1.2.3",
  [
    "foo",
  ],
  {
    "stdio": "inherit",
  },
]
`;

exports[`atomic:component calls \`npm init @coveo/atomic-result-component\` when the user select result in the prompt 1`] = `
[
  "@coveo/create-atomic-result-component@1.2.3",
  [
    "foo",
  ],
  {
    "stdio": "inherit",
  },
]
`;

exports[`atomic:component when \`handleForkedProcess\` throw an error when the thrown error is an AggregatedError calls \`npm init @coveo/atomic-component\` properly 1`] = `
[The quick brown fox jumps over the lazy dog.: The quick brown fox jumps over the lazy dog.
 • Waltz, bad nymph, for quick jigs vex.
 • Pack my box with five dozen liquor jugs.]
`;

exports[`atomic:component when \`handleForkedProcess\` throw an error when the thrown error is an AggregatedError calls \`npm init @coveo/atomic-result-component\` properly 1`] = `
[The quick brown fox jumps over the lazy dog.: The quick brown fox jumps over the lazy dog.
 • Waltz, bad nymph, for quick jigs vex.
 • Pack my box with five dozen liquor jugs.]
`;

exports[`atomic:component when \`handleForkedProcess\` throw an error when the thrown error is not an AggregatedError calls \`npm init @coveo/atomic-component\` properly 1`] = `[Unknown CLI Error]`;

exports[`atomic:component when \`handleForkedProcess\` throw an error when the thrown error is not an AggregatedError calls \`npm init @coveo/atomic-result-component\` properly 1`] = `[Unknown CLI Error]`;
